--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   border-radius: 50px;
   color: #fff;
   font-weight: 500;
-  margin: 20px 0;
+  margin: 50px 30px 0 0;
   transition: 0.3s;
 }
 .button--ios {
@@ -32,6 +32,7 @@ body {
 }
 .button:hover {
   opacity: 0.8;
+  transform: translateY(-5px);
 }
 
 /* Hero */
